# pqc-security-analyzer

./: .gitignore  README.md  crypto_scanner.py  main.py  pyproject.toml  quantum_risk.py  report_generator.py  requirements.txt  sidechannel_test.py
demo_results/: pqc_analysis_report.html  pqc_analysis_report.md
outreach/: 01_christian_schaffner_uva.md  02_tanja_lange_tue.md  03_vu_amsterdam_crypto.md  04_radboud_dis_group.md
