[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc-security-analyzer"
version = "1.0.0"
description = "Post-Quantum Cryptography Migration Readiness Assessment Tool — scans codebases for classical crypto, assesses quantum impact, tests PQC side-channels"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Enish Shah", email = "enish.b.shah@gmail.com"},
]
keywords = [
    "post-quantum-cryptography",
    "quantum-security",
    "pqc",
    "cryptography",
    "security-analysis",
    "side-channel",
    "crypto-scanner",
    "phd-research",
    "cybersecurity",
    "nist-pqc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/adbhutrd/pqc-security-analyzer"
"Bug Reports" = "https://github.com/adbhutrd/pqc-security-analyzer/issues"
"Research Context" = "https://github.com/adbhutrd/pqc-security-analyzer#-research-motivation"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]

# Note: This is a script-based tool, not an installable library.
# Run from the repo root directly: python3 main.py <target>
# Module files are flat in the repo root (crypto_scanner.py, etc.)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
